--- a/css_selectors.html
+++ b/css_selectors.html
@@ -68,35 +68,35 @@
             
          </script>			
          <div >
-            <img class="page_image"  src="images/css_selectors.jpg" alt="Learn web development">
+            <img class="page_image"  src="quantx12.github.io/Images/css_selectors.jpg" alt="Learn web development">
          </div>
          <div class="content">
             <h1><strong>CSS SELECTORS</strong></h1>
             <p>CSS selectors are used to select the specific HTML element or elements that you want to style. There are five different types of CSS selectors simple selectors, combinator selectors pseudo-class selectors, pseudo-elements sectors and attribute selectors. On this page we will only be explaining and demonstrating the use of the most basic CSS selectors, however you can find below a table from w3 schools that covers the rest of the CSS selectors.</p>
             <div class="content" id="selector1">
-               <img class="example_image" src="images/CSSelement.jpg" alt="Learn web development">
+               <img class="example_image" src="quantx12.github.io/Images/CSSelement.jpg" alt="Learn web development">
                <h2><b>CSS element selector: </b></h2>
                <p> In the example about you can see that I have used the element selector &lt;img&gt; to add styling to all img elements. As a result all img elements will now have the style poperties of display:block; margin-left:auto; and margin-right:auto;.</p>
             </div>
             <div class="content" id="selector2">
-               <img class="example_image" src="images/CSSid.jpg" alt="Learn web development">
-               <img class="example_image" src="images/CSSid2.jpg" alt="Learn web development">
+               <img class="example_image" src="quantx12.github.io/Images/CSSid.jpg" alt="Learn web development">
+               <img class="example_image" src="quantx12.github.io/Images/CSSid2.jpg" alt="Learn web development">
                <h2><b>CSS id selector: </b></h2>
                <p>As you can see in the first image I have entered id=”about-banner” in the div element, next I used #about-banner in the stylesheet to select the element that I would like to add the styling to, as a result the div banner with the about-banner id has 50px of padding, blue background and white centered text. </p>
             </div>
             <div class="content" id="selecto3">
-               <img class="example_image" src="images/CSSclass.jpg" alt="Learn web development">
-               <img class="example_image" src="images/CSSclass2.jpg" alt="Learn web development">
+               <img class="example_image" src="quantx12.github.io/Images/CSSclass.jpg" alt="Learn web development">
+               <img class="example_image" src="quantx12.github.io/Images/CSSclass2.jpg" alt="Learn web development">
                <h2><b>CSS class selector: </b></h2>
                <p>As you can see from the first image I am using class=”footer” in the footer tag, in the next image it shows that I have used the class selector .footer { color:#ff7f50; width:70vw;} to style the footer blue and set its width to 70vw.</p>
             </div>
             <div class="content" id="selector4">
-               <img class="example_image" src="images/CSSuniversal.jpg" alt="Learn web development">
+               <img class="example_image" src="quantx12.github.io/Images/CSSuniversal.jpg" alt="Learn web development">
                <h2><b>CSS universal selector: </b></h2>
                <p>The use of the css selector * means that all the styles associated with it will be applied to all HTML elements.</p>
             </div>
             <div class="content" id="selector5">
-               <img class="example_image" src="images/CSSgrouping.jpg" alt="Learn web development">
+               <img class="example_image" src="quantx12.github.io/Images/CSSgrouping.jpg" alt="Learn web development">
                <h2><b>CSS grouping selector: </b></h2>
                <p>As you can see from the image above the I have grouped the .content h1{} and .content h2{} selectors as .content h1,h2{}. This is because both tags have the same styling and so by grouping the selectors it reduced the amount of code that you need to write. You group the selectors by using a comma between them.</p>
             </div>
