--- a/content_seperation.html
+++ b/content_seperation.html
@@ -68,7 +68,7 @@
             
          </script>				
          <div >
-            <img class="page_image" src="images/content_seperation.jpg" alt="Learn web development">
+            <img class="page_image" src="quantx12.github.io/Images/content_seperation.jpg" alt="Learn web development">
          </div>
          <div class="content">
             <h1><strong>CONTENT SEPERATION</strong></h1>
