--- a/about_us.html
+++ b/about_us.html
@@ -91,7 +91,7 @@
          </div>
          <hr>
          <div >
-            <img class="example_image" src="images/kc_logo.png" alt="Learn web development">
+            <img class="example_image" src="quantx12.github.io/Images/kc_logo.png" alt="Learn web development">
          </div>
          <hr>
          <footer class="footer">
