--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             
          </script>			
          <div>
-            <img class="page_image"  src="quantx12.github.io/Images/home_page.png" alt="Learn web development">
+            <img class="page_image"  src="Images/home_page.png" alt="Learn web development">
          </div>
          <div class="content" id="Introduction" style="background-color: #022140; color: white; ">
             <h1><strong style="color: #FF7F50;">Introduction to Web development</strong></h1>
