--- a/css_selectors.html
+++ b/css_selectors.html
@@ -85,18 +85,18 @@
                <p>As you can see in the first image I have entered id=”about-banner” in the div element, next I used #about-banner in the stylesheet to select the element that I would like to add the styling to, as a result the div banner with the about-banner id has 50px of padding, blue background and white centered text. </p>
             </div>
             <div class="content" id="selecto3">
-               <img class="example_image" src="quantx12.github.io/Images/CSSclass.JPG" alt="Learn web development">
-               <img class="example_image" src="quantx12.github.io/Images/CSSclass2.JPG" alt="Learn web development">
+               <img class="example_image" src="Images/CSSclass.JPG" alt="Learn web development">
+               <img class="example_image" src="Images/CSSclass2.JPG" alt="Learn web development">
                <h2><b>CSS class selector: </b></h2>
                <p>As you can see from the first image I am using class=”footer” in the footer tag, in the next image it shows that I have used the class selector .footer { color:#ff7f50; width:70vw;} to style the footer blue and set its width to 70vw.</p>
             </div>
             <div class="content" id="selector4">
-               <img class="example_image" src="quantx12.github.io/Images/CSSuniversal.JPG" alt="Learn web development">
+               <img class="example_image" src="Images/CSSuniversal.JPG" alt="Learn web development">
                <h2><b>CSS universal selector: </b></h2>
                <p>The use of the css selector * means that all the styles associated with it will be applied to all HTML elements.</p>
             </div>
             <div class="content" id="selector5">
-               <img class="example_image" src="quantx12.github.io/Images/CSSgrouping.JPG" alt="Learn web development">
+               <img class="example_image" src="Images/CSSgrouping.JPG" alt="Learn web development">
                <h2><b>CSS grouping selector: </b></h2>
                <p>As you can see from the image above the I have grouped the .content h1{} and .content h2{} selectors as .content h1,h2{}. This is because both tags have the same styling and so by grouping the selectors it reduced the amount of code that you need to write. You group the selectors by using a comma between them.</p>
             </div>
