--- a/hierarchical_styles.html
+++ b/hierarchical_styles.html
@@ -68,7 +68,7 @@
             
          </script>				
          <div >
-            <img class="page_image"  src="quantx12.github.io/Images/hierarchical_styles.jpg" alt="Learn web development">
+            <img class="page_image"  src="Images/hierarchical_styles.jpg" alt="Learn web development">
          </div>
          <div class="content">
             <h1><strong>HIERARCHICAL STYLES</strong></h1>
@@ -78,19 +78,19 @@
 			<p>You can find more information on how to the specificity rules and how to calculate specificty at: <a href="https://www.w3schools.com/css/css_specificity.asp">https://www.w3schools.com/css/css_specificity.asp</a> </p>
 		 </div>
          <div class="content">
-            <img class="example_image"  src="quantx12.github.io/Images/spec1.png" alt="Learn web development">
+            <img class="example_image"  src="Images/spec1.png" alt="Learn web development">
          </div>
          <hr>
          <div class="content">
-            <img class="example_image"  src="quantx12.github.io/Images/spec2.png" alt="Learn web development">
+            <img class="example_image"  src="Images/spec2.png" alt="Learn web development">
          </div>
          <hr>
          <div class="content">
-            <img class="example_image"  src="quantx12.github.io/Images/spec3.png" alt="Learn web development">
+            <img class="example_image"  src="Images/spec3.png" alt="Learn web development">
          </div>
          <hr>
          <div class="content">
-            <img class="example_image"  src="quantx12.github.io/Images/spec4.png" alt="Learn web development">
+            <img class="example_image"  src="Images/spec4.png" alt="Learn web development">
          </div>
          <hr>
          <footer class="footer">
