--- a/css_selectors.html
+++ b/css_selectors.html
@@ -68,19 +68,19 @@
             
          </script>			
          <div >
-            <img class="page_image"  src="quantx12.github.io/Images/css_selectors.jpg" alt="Learn web development">
+            <img class="page_image"  src="Images/css_selectors.jpg" alt="Learn web development">
          </div>
          <div class="content">
             <h1><strong>CSS SELECTORS</strong></h1>
             <p>CSS selectors are used to select the specific HTML element or elements that you want to style. There are five different types of CSS selectors simple selectors, combinator selectors pseudo-class selectors, pseudo-elements sectors and attribute selectors. On this page we will only be explaining and demonstrating the use of the most basic CSS selectors, however you can find below a table from w3 schools that covers the rest of the CSS selectors.</p>
             <div class="content" id="selector1">
-               <img class="example_image" src="quantx12.github.io/Images/CSSelement.JPG" alt="Learn web development">
+               <img class="example_image" src="Images/CSSelement.JPG" alt="Learn web development">
                <h2><b>CSS element selector: </b></h2>
                <p> In the example about you can see that I have used the element selector &lt;img&gt; to add styling to all img elements. As a result all img elements will now have the style poperties of display:block; margin-left:auto; and margin-right:auto;.</p>
             </div>
             <div class="content" id="selector2">
-               <img class="example_image" src="quantx12.github.io/Images/CSSid.JPG" alt="Learn web development">
-               <img class="example_image" src="quantx12.github.io/Images/CSSid2.JPG" alt="Learn web development">
+               <img class="example_image" src="Images/CSSid.JPG" alt="Learn web development">
+               <img class="example_image" src="Images/CSSid2.JPG" alt="Learn web development">
                <h2><b>CSS id selector: </b></h2>
                <p>As you can see in the first image I have entered id=”about-banner” in the div element, next I used #about-banner in the stylesheet to select the element that I would like to add the styling to, as a result the div banner with the about-banner id has 50px of padding, blue background and white centered text. </p>
             </div>
